--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 </head>
 <body>
 <h1> LXP-Dublin </h1>
-<p> Une classe d'alcolo ! </p>
+<p> DCU School ! </p>
+<ul>
+<li>Lundi linux </li>
+<li>Mardi linux</li>
+<li>Mercredi linux</li>
+<li>Jeudi Business English </li>
+</ul>
 </body>
 </html>
